네비게이션 작업 중

--- a/src/resources/index.css
+++ b/src/resources/index.css
@@ -450,6 +450,7 @@ option:first {
   color: #fff;
   height: 43px;
   border: 0px;
+  border-radius: 0px !important;
 }
 
 .cancelbtn {
@@ -457,6 +458,7 @@ option:first {
   color: #fff;
   height: 43px;
   border: 0px;
+  border-radius: 0px !important;
 }
 
 .tag-enable {
