room 높이 설정 및 탭 변경시 잔재 부분 삭제

--- a/src/resources/index.css
+++ b/src/resources/index.css
@@ -282,6 +282,14 @@ option:first {
   color: #e3e0e0;
 }
 
+.bg-orange {
+  background-color: orange;
+}
+
+.color-orange {
+  color: orange;
+}
+
 .bor {
   border: 1px solid #cdcdcd;
 }
