--- a/src/resources/index.css
+++ b/src/resources/index.css
@@ -563,3 +563,9 @@ option:first {
   color: #fff;
   background-color: #35bffd;
 }
+
+.text-overflow {
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
+}
